5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1637_2703.log
== TEST (2019-04-07 21:28:03) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = eleitor
else:
	msg = nao_eleitor
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:28:09) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = eleitor
else:
	msg = nao_eleitor
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:28:19) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = eleitor
else:
	msg = nao_eleitor
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:29:57) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = eleitor
else:
	msg = nao_eleitor
	
resultado = msg
	
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:31:22) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = eleitor
else:
	msg = naoeleitor
	
resultado = msg
	
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = naoeleitor
NameError: name 'naoeleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:32:09) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:33:15) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- EXECUTION TIME:
0.175218
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:33:25) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- EXECUTION TIME:
0.185455
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:42:19) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- EXECUTION TIME:
0.134547
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:43:34) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- EXECUTION TIME:
0.160267
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:43:42) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado
-- EXECUTION TIME:
0.15431
-- ERROR:
  File "/home/codebench/codes/1637/2703/main.py", line 11
    
                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:43:50) 
-- CODE:
x = int(input("idade: "))

if (x >= 18):
	msg = "eleitor"
else:
	msg = "nao_eleitor"
	
resultado = msg
	
print(resultado)
-- EXECUTION TIME:
0.210756
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
